Fix scrolling on IE7 in impacts table rules pop-up.

--- a/css/pi.css
+++ b/css/pi.css
@@ -392,7 +392,7 @@ opacity:0.6;
 #content div.zoomed { }
 
 #content div.zoomed_impact div.zoomwin div + div {
-    overflow-y: auto;
+    overflow-y: scroll;
     height: 592px;
 }
 
